@@ -118,7 +118,7 @@ typedef struct {
     CARD8   SR1F, SR20, SR21, SR22,SR23,SR24,SR25,SR26;
     CARD8   SR27, SR28, SR29, SR2A,SR2B,SR2C,SR2D,SR2E;
     CARD8   SR2F, SR30, SR31, SR32,SR33,SR34,SR40,SR41;
-    CARD8   SR42, SR43, SR44, SR45,SR46,SR47;
+    CARD8   SR42, SR43, SR44, SR45,SR46,SR47,SR48,SR49;
     CARD8   SR4A, SR4B, SR4C;
 
     /*   extended CRTC registers */
